kube-prometheus-stack/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    meta.helm.sh/release-name: prometheus
    meta.helm.sh/release-namespace: monitoring
  labels:
    app.kubernetes.io/managed-by: Helm
  name: prometheus-tls-redirect
  namespace: monitoring
spec:
  hostnames:
    - prometheus.the-hard-way.gov
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: prometheus
      sectionName: http
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    meta.helm.sh/release-name: prometheus
    meta.helm.sh/release-namespace: monitoring
  labels:
    app.kubernetes.io/managed-by: Helm
  name: prometheus
  namespace: monitoring
spec:
  hostnames:
    - prometheus.the-hard-way.gov
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: prometheus
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: prometheus
          port: 9090
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
